# pythonStudy

./: .gitignore  .replit  README.md  dataHandling.ipynb  pyproject.toml  replit.nix  requirements.txt
cmd/: init.sh  install.sh  jupyter.sh  reboot.sh  run.sh
dataset/: data.csv
dataset/hr-data/: answer.json
sh/: forceToPush.sh  init.sh  install.sh  jupyter.sh  push.sh  reboot.sh
src/이것이 취업을 위한 코딩 테스트다 with 파이썬/: 01장 코딩 테스트 개요.ipynb  03장 그리디.ipynb  04장 구현.ipynb  05장 DFS&BFS.ipynb  06장 정렬.ipynb  07장 이진 탐색.ipynb  08장 다이나믹 프로그래밍.ipynb  09장 최단 경로.ipynb  10장 기타 그래프 이론.ipynb  2020년 상반기 삼성전자 기출문제.ipynb  README.md  기타 알고리즘.ipynb  알고리즘 유형별 기출문제 풀이.ipynb  추가 보충 자료.ipynb
파이썬 한권으로 끝내기/제2장 데이터 핸들링/: 제4절 조건에 맞는 데이터 탐색 및 수정.ipynb  제8절 데이터 재구조화.ipynb  제9절 데이터프레임에 함수 적용하기.ipynb
파이썬 한권으로 끝내기/제3장 EDA와 시각화/: 제2절 막대그래프와 히스토그램.ipynb  제4절 산점도(Scatter Plot).ipynb  제5절 선 그래프.ipynb
파이썬 한권으로 끝내기/제4장 데이터 전처리/: 제3절 범주형 변수 처리.ipynb  제7절 데이터 불균현 문제 처리.ipynb
빅분기/: 2회 기출유형 작업형 1-1.ipynb  2회 기출유형 작업형 1-2.ipynb  3회 기출유형 작업형 1-1.ipynb  3회 기출유형 작업형 1-2.ipynb  T1-06. Groupby Sum - 결측치, 조건.ipynb  T1-09. Standardization - 표준화, 중앙값.ipynb  T1-1. Outlier (IQR) - 이상치, IQR.ipynb  T1-13. Correlation - 상관관계.ipynb  T1-3. Missing data - 결측치, 삭제, 중앙, 평균.ipynb  T1-4. Skewness and Kurtosis (Log Scale) - 왜도, 첨도, 로그스케일.ipynb  [Tip] 시험환경에서 정당한 컨닝페이퍼 만들기 Guide.ipynb
빅분기/작업형1/: 2회 기출유형 작업형 1-1.ipynb  (+31 more)
파이썬 한권으로 끝내기/: test.ipynb
(+104 files in other folders)
