[tool.poetry]
name = "pythonstudy"
version = "0.1.0"
description = ""
authors = ["YeongJuKim2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
jupyter = "^1.0.0"
scikit-learn = "^1.1.1"
seaborn = "^0.11.2"
xgboost = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
